// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`display correct info 1`] = `
"<PriceBreakdown application={{...}} selectedOptions={{...}} unitId={12} category=\\"storage\\" categoryHelperText=\\"storage space\\" onError={[Function: mockConstructor]} onSuccess={[Function: mockConstructor]}>
  <Styled(div)>
    <div className=\\"css-1gbujtk\\">
      <div className=\\"css-101ez95\\">
        <div id={[undefined]} className=\\"css-1h1izsk\\" />
        <div className=\\"css-1t9b4ew\\">
          <div className=\\"css-hgfyev\\">
            <div>
              <Styled(MuiBox)>
                <div className=\\"MuiBox-root MuiBox-root-2\\">
                  <Tip text={{...}}>
                    <WithStyles(ForwardRef(Grid)) container={true} spacing={1} alignItems=\\"center\\">
                      <ForwardRef(Grid) classes={{...}} container={true} spacing={1} alignItems=\\"center\\">
                        <div className=\\"MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center\\">
                          <WithStyles(ForwardRef(Grid)) item={true}>
                            <ForwardRef(Grid) classes={{...}} item={true}>
                              <div className=\\"MuiGrid-root MuiGrid-item\\">
                                <Styled(img) alt=\\"light bulb\\" src=\\"lightbulb.png\\">
                                  <img alt=\\"light bulb\\" src=\\"lightbulb.png\\" className=\\"css-9ojriw\\" />
                                </Styled(img)>
                              </div>
                            </ForwardRef(Grid)>
                          </WithStyles(ForwardRef(Grid))>
                          <WithStyles(ForwardRef(Grid)) item={true} xs={true}>
                            <ForwardRef(Grid) classes={{...}} item={true} xs={true}>
                              <div className=\\"MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true\\">
                                <WithStyles(ForwardRef(Grid)) item={true} xs={true}>
                                  <ForwardRef(Grid) classes={{...}} item={true} xs={true}>
                                    <div className=\\"MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true\\">
                                      <Styled(b) fontSize={16}>
                                        <b fontSize={16} className=\\"css-zfcvhg\\" />
                                      </Styled(b)>
                                    </div>
                                  </ForwardRef(Grid)>
                                </WithStyles(ForwardRef(Grid))>
                                <WithStyles(ForwardRef(Grid)) item={true} xs={true}>
                                  <ForwardRef(Grid) classes={{...}} item={true} xs={true}>
                                    <div className=\\"MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true\\">
                                      <Styled(p)>
                                        <p className=\\"css-3m08t9\\">
                                          <b>
                                            $2,020
                                             Monthly Rent
                                          </b>
                                          <br />
                                          $10/mo for 3 storage spaces
                                        </p>
                                      </Styled(p)>
                                    </div>
                                  </ForwardRef(Grid)>
                                </WithStyles(ForwardRef(Grid))>
                              </div>
                            </ForwardRef(Grid)>
                          </WithStyles(ForwardRef(Grid))>
                        </div>
                      </ForwardRef(Grid)>
                    </WithStyles(ForwardRef(Grid))>
                  </Tip>
                </div>
              </Styled(MuiBox)>
            </div>
          </div>
          <div className=\\"css-1bh0d37\\">
            <WithStyles(ForwardRef(ExpansionPanel)) elevation={0} defaultExpanded={false}>
              <ForwardRef(ExpansionPanel) classes={{...}} elevation={0} defaultExpanded={false}>
                <WithStyles(ForwardRef(Paper)) className=\\"MuiExpansionPanel-root MuiExpansionPanel-rounded\\" square={false} elevation={0}>
                  <ForwardRef(Paper) classes={{...}} className=\\"MuiExpansionPanel-root MuiExpansionPanel-rounded\\" square={false} elevation={0}>
                    <div className=\\"MuiPaper-root MuiExpansionPanel-root MuiExpansionPanel-rounded MuiPaper-elevation0 MuiPaper-rounded\\">
                      <WithStyles(ForwardRef(ExpansionPanelSummary)) expandIcon={{...}}>
                        <ForwardRef(ExpansionPanelSummary) classes={{...}} expandIcon={{...}}>
                          <WithStyles(ForwardRef(ButtonBase)) focusRipple={false} disableRipple={true} disabled={false} component=\\"div\\" aria-expanded={false} className=\\"MuiExpansionPanelSummary-root\\" onFocusVisible={[Function: handleFocusVisible]} onBlur={[Function: handleBlur]} onClick={[Function: handleChange]}>
                            <ForwardRef(ButtonBase) classes={{...}} focusRipple={false} disableRipple={true} disabled={false} component=\\"div\\" aria-expanded={false} className=\\"MuiExpansionPanelSummary-root\\" onFocusVisible={[Function: handleFocusVisible]} onBlur={[Function: handleBlur]} onClick={[Function: handleChange]}>
                              <div className=\\"MuiButtonBase-root MuiExpansionPanelSummary-root\\" onBlur={[Function (anonymous)]} onClick={[Function: handleChange]} onFocus={[Function (anonymous)]} onKeyDown={[Function (anonymous)]} onKeyUp={[Function (anonymous)]} onMouseDown={[Function (anonymous)]} onMouseLeave={[Function (anonymous)]} onMouseUp={[Function (anonymous)]} onDragLeave={[Function (anonymous)]} onTouchEnd={[Function (anonymous)]} onTouchMove={[Function (anonymous)]} onTouchStart={[Function (anonymous)]} tabIndex={0} role=\\"button\\" aria-disabled={false} aria-expanded={false}>
                                <div className=\\"MuiExpansionPanelSummary-content\\">
                                  Rent Breakdown
                                </div>
                                <WithStyles(ForwardRef(IconButton)) className=\\"MuiExpansionPanelSummary-expandIcon\\" edge=\\"end\\" component=\\"div\\" tabIndex={{...}} role={{...}} aria-hidden={true}>
                                  <ForwardRef(IconButton) classes={{...}} className=\\"MuiExpansionPanelSummary-expandIcon\\" edge=\\"end\\" component=\\"div\\" tabIndex={{...}} role={{...}} aria-hidden={true}>
                                    <WithStyles(ForwardRef(ButtonBase)) className=\\"MuiIconButton-root MuiExpansionPanelSummary-expandIcon MuiIconButton-edgeEnd\\" centerRipple={true} focusRipple={true} disabled={false} component=\\"div\\" tabIndex={{...}} role={{...}} aria-hidden={true}>
                                      <ForwardRef(ButtonBase) classes={{...}} className=\\"MuiIconButton-root MuiExpansionPanelSummary-expandIcon MuiIconButton-edgeEnd\\" centerRipple={true} focusRipple={true} disabled={false} component=\\"div\\" tabIndex={{...}} role={{...}} aria-hidden={true}>
                                        <div className=\\"MuiButtonBase-root MuiIconButton-root MuiExpansionPanelSummary-expandIcon MuiIconButton-edgeEnd\\" onBlur={[Function (anonymous)]} onClick={[undefined]} onFocus={[Function (anonymous)]} onKeyDown={[Function (anonymous)]} onKeyUp={[Function (anonymous)]} onMouseDown={[Function (anonymous)]} onMouseLeave={[Function (anonymous)]} onMouseUp={[Function (anonymous)]} onDragLeave={[Function (anonymous)]} onTouchEnd={[Function (anonymous)]} onTouchMove={[Function (anonymous)]} onTouchStart={[Function (anonymous)]} tabIndex={{...}} role={{...}} aria-disabled={false} aria-hidden={true}>
                                          <span className=\\"MuiIconButton-label\\">
                                            <ForwardRef>
                                              <WithStyles(ForwardRef(SvgIcon))>
                                                <ForwardRef(SvgIcon) classes={{...}}>
                                                  <svg className=\\"MuiSvgIcon-root\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden={true} role={[undefined]}>
                                                    <path d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\" />
                                                    <path fill=\\"none\\" d=\\"M0 0h24v24H0z\\" />
                                                  </svg>
                                                </ForwardRef(SvgIcon)>
                                              </WithStyles(ForwardRef(SvgIcon))>
                                            </ForwardRef>
                                          </span>
                                        </div>
                                      </ForwardRef(ButtonBase)>
                                    </WithStyles(ForwardRef(ButtonBase))>
                                  </ForwardRef(IconButton)>
                                </WithStyles(ForwardRef(IconButton))>
                              </div>
                            </ForwardRef(ButtonBase)>
                          </WithStyles(ForwardRef(ButtonBase))>
                        </ForwardRef(ExpansionPanelSummary)>
                      </WithStyles(ForwardRef(ExpansionPanelSummary))>
                      <WithStyles(ForwardRef(Collapse)) in={false} timeout=\\"auto\\">
                        <ForwardRef(Collapse) classes={{...}} in={false} timeout=\\"auto\\">
                          <Transition in={false} onEnter={[Function (anonymous)]} onEntered={[Function (anonymous)]} onEntering={[Function (anonymous)]} onExit={[Function (anonymous)]} onExited={[Function (anonymous)]} onExiting={[Function (anonymous)]} addEndListener={[Function: addEndListener]} nodeRef={[undefined]} timeout={{...}} mountOnEnter={false} unmountOnExit={false} appear={false} enter={true} exit={true}>
                            <div className=\\"MuiCollapse-container MuiCollapse-hidden\\" style={{...}}>
                              <div className=\\"MuiCollapse-wrapper\\">
                                <div className=\\"MuiCollapse-wrapperInner\\">
                                  <div aria-labelledby={[undefined]} id={[undefined]} role=\\"region\\">
                                    <WithStyles(ForwardRef(ExpansionPanelDetails)) classes={{...}}>
                                      <ForwardRef(ExpansionPanelDetails) classes={{...}}>
                                        <div className=\\"MuiExpansionPanelDetails-root makeStyles-root-1\\">
                                          <div className=\\"css-olqeuu\\">
                                            Base Rent
                                            <span className=\\"pull-right\\">
                                              $2,000
                                            </span>
                                          </div>
                                          <div>
                                            <div className=\\"css-olqeuu\\">
                                              storage
                                              <span className=\\"pull-right\\">
                                                $10
                                              </span>
                                            </div>
                                          </div>
                                          <div>
                                            <div className=\\"css-olqeuu\\">
                                              pets
                                              <span className=\\"pull-right\\">
                                                $10
                                              </span>
                                            </div>
                                          </div>
                                          <Styled(div)>
                                            <div className=\\"css-15qatac\\">
                                              <Styled(p) bold={true}>
                                                <p className=\\"css-1bj6jbc\\">
                                                  Total
                                                </p>
                                              </Styled(p)>
                                              <div>
                                                <Styled(p) bold={true}>
                                                  <p className=\\"css-1bj6jbc\\">
                                                    $2,020
                                                  </p>
                                                </Styled(p)>
                                              </div>
                                            </div>
                                          </Styled(div)>
                                        </div>
                                      </ForwardRef(ExpansionPanelDetails)>
                                    </WithStyles(ForwardRef(ExpansionPanelDetails))>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </Transition>
                        </ForwardRef(Collapse)>
                      </WithStyles(ForwardRef(Collapse))>
                    </div>
                  </ForwardRef(Paper)>
                </WithStyles(ForwardRef(Paper))>
              </ForwardRef(ExpansionPanel)>
            </WithStyles(ForwardRef(ExpansionPanel))>
          </div>
        </div>
      </div>
    </div>
  </Styled(div)>
</PriceBreakdown>"
`;

exports[`display correct info if has included options 1`] = `
"<PriceBreakdown application={{...}} selectedOptions={{...}} unitId={12} category=\\"storage\\" categoryHelperText=\\"storage space\\" onError={[Function: mockConstructor]} onSuccess={[Function: mockConstructor]}>
  <Styled(div)>
    <div className=\\"css-1gbujtk\\">
      <div className=\\"css-101ez95\\">
        <div id={[undefined]} className=\\"css-1h1izsk\\" />
        <div className=\\"css-1t9b4ew\\">
          <div className=\\"css-hgfyev\\">
            <div>
              <Styled(MuiBox)>
                <div className=\\"MuiBox-root MuiBox-root-3\\">
                  <Tip text={{...}}>
                    <WithStyles(ForwardRef(Grid)) container={true} spacing={1} alignItems=\\"center\\">
                      <ForwardRef(Grid) classes={{...}} container={true} spacing={1} alignItems=\\"center\\">
                        <div className=\\"MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-align-items-xs-center\\">
                          <WithStyles(ForwardRef(Grid)) item={true}>
                            <ForwardRef(Grid) classes={{...}} item={true}>
                              <div className=\\"MuiGrid-root MuiGrid-item\\">
                                <Styled(img) alt=\\"light bulb\\" src=\\"lightbulb.png\\">
                                  <img alt=\\"light bulb\\" src=\\"lightbulb.png\\" className=\\"css-9ojriw\\" />
                                </Styled(img)>
                              </div>
                            </ForwardRef(Grid)>
                          </WithStyles(ForwardRef(Grid))>
                          <WithStyles(ForwardRef(Grid)) item={true} xs={true}>
                            <ForwardRef(Grid) classes={{...}} item={true} xs={true}>
                              <div className=\\"MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true\\">
                                <WithStyles(ForwardRef(Grid)) item={true} xs={true}>
                                  <ForwardRef(Grid) classes={{...}} item={true} xs={true}>
                                    <div className=\\"MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true\\">
                                      <Styled(b) fontSize={16}>
                                        <b fontSize={16} className=\\"css-zfcvhg\\" />
                                      </Styled(b)>
                                    </div>
                                  </ForwardRef(Grid)>
                                </WithStyles(ForwardRef(Grid))>
                                <WithStyles(ForwardRef(Grid)) item={true} xs={true}>
                                  <ForwardRef(Grid) classes={{...}} item={true} xs={true}>
                                    <div className=\\"MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true\\">
                                      <Styled(p)>
                                        <p className=\\"css-3m08t9\\">
                                          <b>
                                            $2,020
                                             Monthly Rent
                                          </b>
                                          <br />
                                          $0/mo for 3 storage spaces
                                        </p>
                                      </Styled(p)>
                                    </div>
                                  </ForwardRef(Grid)>
                                </WithStyles(ForwardRef(Grid))>
                              </div>
                            </ForwardRef(Grid)>
                          </WithStyles(ForwardRef(Grid))>
                        </div>
                      </ForwardRef(Grid)>
                    </WithStyles(ForwardRef(Grid))>
                  </Tip>
                </div>
              </Styled(MuiBox)>
            </div>
          </div>
          <div className=\\"css-1bh0d37\\">
            <WithStyles(ForwardRef(ExpansionPanel)) elevation={0} defaultExpanded={false}>
              <ForwardRef(ExpansionPanel) classes={{...}} elevation={0} defaultExpanded={false}>
                <WithStyles(ForwardRef(Paper)) className=\\"MuiExpansionPanel-root MuiExpansionPanel-rounded\\" square={false} elevation={0}>
                  <ForwardRef(Paper) classes={{...}} className=\\"MuiExpansionPanel-root MuiExpansionPanel-rounded\\" square={false} elevation={0}>
                    <div className=\\"MuiPaper-root MuiExpansionPanel-root MuiExpansionPanel-rounded MuiPaper-elevation0 MuiPaper-rounded\\">
                      <WithStyles(ForwardRef(ExpansionPanelSummary)) expandIcon={{...}}>
                        <ForwardRef(ExpansionPanelSummary) classes={{...}} expandIcon={{...}}>
                          <WithStyles(ForwardRef(ButtonBase)) focusRipple={false} disableRipple={true} disabled={false} component=\\"div\\" aria-expanded={false} className=\\"MuiExpansionPanelSummary-root\\" onFocusVisible={[Function: handleFocusVisible]} onBlur={[Function: handleBlur]} onClick={[Function: handleChange]}>
                            <ForwardRef(ButtonBase) classes={{...}} focusRipple={false} disableRipple={true} disabled={false} component=\\"div\\" aria-expanded={false} className=\\"MuiExpansionPanelSummary-root\\" onFocusVisible={[Function: handleFocusVisible]} onBlur={[Function: handleBlur]} onClick={[Function: handleChange]}>
                              <div className=\\"MuiButtonBase-root MuiExpansionPanelSummary-root\\" onBlur={[Function (anonymous)]} onClick={[Function: handleChange]} onFocus={[Function (anonymous)]} onKeyDown={[Function (anonymous)]} onKeyUp={[Function (anonymous)]} onMouseDown={[Function (anonymous)]} onMouseLeave={[Function (anonymous)]} onMouseUp={[Function (anonymous)]} onDragLeave={[Function (anonymous)]} onTouchEnd={[Function (anonymous)]} onTouchMove={[Function (anonymous)]} onTouchStart={[Function (anonymous)]} tabIndex={0} role=\\"button\\" aria-disabled={false} aria-expanded={false}>
                                <div className=\\"MuiExpansionPanelSummary-content\\">
                                  Rent Breakdown
                                </div>
                                <WithStyles(ForwardRef(IconButton)) className=\\"MuiExpansionPanelSummary-expandIcon\\" edge=\\"end\\" component=\\"div\\" tabIndex={{...}} role={{...}} aria-hidden={true}>
                                  <ForwardRef(IconButton) classes={{...}} className=\\"MuiExpansionPanelSummary-expandIcon\\" edge=\\"end\\" component=\\"div\\" tabIndex={{...}} role={{...}} aria-hidden={true}>
                                    <WithStyles(ForwardRef(ButtonBase)) className=\\"MuiIconButton-root MuiExpansionPanelSummary-expandIcon MuiIconButton-edgeEnd\\" centerRipple={true} focusRipple={true} disabled={false} component=\\"div\\" tabIndex={{...}} role={{...}} aria-hidden={true}>
                                      <ForwardRef(ButtonBase) classes={{...}} className=\\"MuiIconButton-root MuiExpansionPanelSummary-expandIcon MuiIconButton-edgeEnd\\" centerRipple={true} focusRipple={true} disabled={false} component=\\"div\\" tabIndex={{...}} role={{...}} aria-hidden={true}>
                                        <div className=\\"MuiButtonBase-root MuiIconButton-root MuiExpansionPanelSummary-expandIcon MuiIconButton-edgeEnd\\" onBlur={[Function (anonymous)]} onClick={[undefined]} onFocus={[Function (anonymous)]} onKeyDown={[Function (anonymous)]} onKeyUp={[Function (anonymous)]} onMouseDown={[Function (anonymous)]} onMouseLeave={[Function (anonymous)]} onMouseUp={[Function (anonymous)]} onDragLeave={[Function (anonymous)]} onTouchEnd={[Function (anonymous)]} onTouchMove={[Function (anonymous)]} onTouchStart={[Function (anonymous)]} tabIndex={{...}} role={{...}} aria-disabled={false} aria-hidden={true}>
                                          <span className=\\"MuiIconButton-label\\">
                                            <ForwardRef>
                                              <WithStyles(ForwardRef(SvgIcon))>
                                                <ForwardRef(SvgIcon) classes={{...}}>
                                                  <svg className=\\"MuiSvgIcon-root\\" focusable=\\"false\\" viewBox=\\"0 0 24 24\\" color={[undefined]} aria-hidden={true} role={[undefined]}>
                                                    <path d=\\"M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z\\" />
                                                    <path fill=\\"none\\" d=\\"M0 0h24v24H0z\\" />
                                                  </svg>
                                                </ForwardRef(SvgIcon)>
                                              </WithStyles(ForwardRef(SvgIcon))>
                                            </ForwardRef>
                                          </span>
                                        </div>
                                      </ForwardRef(ButtonBase)>
                                    </WithStyles(ForwardRef(ButtonBase))>
                                  </ForwardRef(IconButton)>
                                </WithStyles(ForwardRef(IconButton))>
                              </div>
                            </ForwardRef(ButtonBase)>
                          </WithStyles(ForwardRef(ButtonBase))>
                        </ForwardRef(ExpansionPanelSummary)>
                      </WithStyles(ForwardRef(ExpansionPanelSummary))>
                      <WithStyles(ForwardRef(Collapse)) in={false} timeout=\\"auto\\">
                        <ForwardRef(Collapse) classes={{...}} in={false} timeout=\\"auto\\">
                          <Transition in={false} onEnter={[Function (anonymous)]} onEntered={[Function (anonymous)]} onEntering={[Function (anonymous)]} onExit={[Function (anonymous)]} onExited={[Function (anonymous)]} onExiting={[Function (anonymous)]} addEndListener={[Function: addEndListener]} nodeRef={[undefined]} timeout={{...}} mountOnEnter={false} unmountOnExit={false} appear={false} enter={true} exit={true}>
                            <div className=\\"MuiCollapse-container MuiCollapse-hidden\\" style={{...}}>
                              <div className=\\"MuiCollapse-wrapper\\">
                                <div className=\\"MuiCollapse-wrapperInner\\">
                                  <div aria-labelledby={[undefined]} id={[undefined]} role=\\"region\\">
                                    <WithStyles(ForwardRef(ExpansionPanelDetails)) classes={{...}}>
                                      <ForwardRef(ExpansionPanelDetails) classes={{...}}>
                                        <div className=\\"MuiExpansionPanelDetails-root makeStyles-root-1\\">
                                          <div className=\\"css-olqeuu\\">
                                            Base Rent
                                            <span className=\\"pull-right\\">
                                              $2,000
                                            </span>
                                          </div>
                                          <div>
                                            <div className=\\"css-olqeuu\\">
                                              storage
                                              <span className=\\"pull-right\\">
                                                $0
                                              </span>
                                            </div>
                                          </div>
                                          <div>
                                            <div className=\\"css-olqeuu\\">
                                              pets
                                              <span className=\\"pull-right\\">
                                                $10
                                              </span>
                                            </div>
                                          </div>
                                          <Styled(div)>
                                            <div className=\\"css-15qatac\\">
                                              <Styled(p) bold={true}>
                                                <p className=\\"css-1bj6jbc\\">
                                                  Total
                                                </p>
                                              </Styled(p)>
                                              <div>
                                                <Styled(p) bold={true}>
                                                  <p className=\\"css-1bj6jbc\\">
                                                    $2,020
                                                  </p>
                                                </Styled(p)>
                                              </div>
                                            </div>
                                          </Styled(div)>
                                        </div>
                                      </ForwardRef(ExpansionPanelDetails)>
                                    </WithStyles(ForwardRef(ExpansionPanelDetails))>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </Transition>
                        </ForwardRef(Collapse)>
                      </WithStyles(ForwardRef(Collapse))>
                    </div>
                  </ForwardRef(Paper)>
                </WithStyles(ForwardRef(Paper))>
              </ForwardRef(ExpansionPanel)>
            </WithStyles(ForwardRef(ExpansionPanel))>
          </div>
        </div>
      </div>
    </div>
  </Styled(div)>
</PriceBreakdown>"
`;
